--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Flysystem adapter for migration",
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "behat/behat": "^3.1"
     },
     "license": "MIT",
     "authors": [
