--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "behat/behat": "^3.1"
+        "behat/behat": "^3.1",
+        "mikey179/vfsStream": "^1.6"
     },
     "license": "MIT",
     "authors": [
