--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "behat/behat": "^3.1",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "clarkeash/flysystem-vfs-stream": "dev-master"
     },
     "license": "MIT",
     "authors": [
@@ -18,7 +19,7 @@
         "league/flysystem": "~1.0"
     },
     "autoload": {
-        "psr4": {
+        "psr-4": {
             "WebPT\\Flysystem\\Migrate\\": "src/"
         }
     }
